# website

./: 404.html  CNAME  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: mkdocs.yml
blog/: index.html
blog/2023/03/04/my-second-blog-post/: index.html
blog/2024/03/04/my-first-blog-post/: index.html
blog/2025/03/05/the-first-post/: index.html
blog/2025/03/07/i-used-to-be-mormon/: index.html
blog/2025/03/11/laundry/: index.html
blog/2025/04/15/surgery/: index.html
blog/2025/05/08/the-countdown/: index.html
blog/2025/07/08/burnout/: index.html
blog/2025/07/21/i-dont-forgive-you/: index.html
blog/archive/2023/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/category/general/: index.html
blog/category/personal/: index.html
blog/category/religion/: index.html
blog/page/2/: index.html
docs/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: afraid.md  burnout.md  countdown.md  first_post.md  hello.md  hello2.md  i_dont_forgive_you.md  i_used_to_be_mormon.md  laundry.md  surgery.md
docs/javascripts/: smooth_homepage_image.js
docs/projects/: chess_bot.md  index.md
docs/styles/: homepage.css
javascripts/: giscus_theme.js  scroll.js  smooth_homepage_image.js
overrides/partials/: comments.html
projects/: index.html
projects/chess_bot/: index.html
resume/: index.html
search/: search_index.json
styles/: homepage.css
youtube/: index.html
(+3 files in other folders)
